--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"raw-loader": "^0.5.1",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.21.0",
+		"swiper": "^4.4.6",
 		"terser": "^3.14.1",
 		"webpack": "^4.29.0",
 		"webpack-cli": "^3.2.1",
