--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@babel/polyfill": "^7.2.5",
 		"@babel/runtime": "^7.3.1",
 		"babel-helpers": "^6.24.1",
+		"classlist-polyfill": "^1.2.0",
 		"date-input-polyfill": "^2.14.0",
 		"gulp": "^4.0.0",
 		"gulp-svg-sprite": "^1.5.0",
